# old-vpic

./: .gitignore  Makefile.am  README.md  configure.ac  cray-haswell.conf  narwhal-mpich.conf  narwhal-openmpi.conf  narwhal.conf  prep_conf.sh  trinitite.conf  vpic-build.in
cell/ppe/: configure.ac
config/: create_lib_am
decks/: run_common.sh  run_exp.sh  run_test.sh  vpic32.csv  vpic_aprun.sh  vpic_run.sh
decks/fan-run/: config.h  energy.cxx  start-wf-slurm  tracer.cxx  turbulence-sheet-tracer2spec.cxx
decks/tflow-proc/: energy.cxx  turbulence.cxx
decks/trecon-hdf5/: dumptracer_h5part.cxx  global.vpc  info  mpi.mod  outfile1  outfile1-1  outfile2  read_all_tracer.py  read_tracer.py  read_tracer2.py  start-gr-slurm  topology.mod  tracer.cxx  turbulence-sheet-tracer2spec.cxx  turbulence.cxx
decks/trecon-part/: a.out  config.h  dumptracer.cxx  dumptracer_h5part.cxx.old  energies  energy.cxx  global.vpc  info  outfile  reader.cc  reader.cxx  sigma.cxx  start_tr  tracer.cxx  tracer.cxx.old  translate  turbulence-part.cxx  turbulence-sheet-tracer.cxx  turbulence.cxx
decks/trecon-part2/: config.h  energy.cxx  start-gr-slurm  start-wf  tracer.cxx  turbulence.cxx
decks/trecon-proc/: Makefile  energy.cxx  sigma.cxx  start-mu  start-tt  start-tt-tr  tracer.cxx  turbulence-proc.cxx  turbulence-sheet-tracer.cxx
decks/trecon-reader/: CMakeLists.txt  reader.cxx  vpic-reader.cxx
input/: tracer.cxx
interfaces/c/: fig10.c  fig9.c  movie_join.c  movie_join_2d.c  movie_join_bak.c  poynting2d.c  pppp.c
patches/: gcc-3.3.3p-i386.c  gcc-3.4.5p-i386.c
src/: deck_wrapper.cxx  main.cxx
src/boundary/: absorb_tally.c  boundary.h  link.c  maxwellian_reflux.c
src/emitter/: ccube.c  child-langmuir.c  emitter.c  emitter.h  ivory.c
src/field_advance/: field_advance.h
src/grid/: distribute_voxels.c  grid.h  grid_structors.c  ops.c  partition.c
src/material/: material.c  material.h
src/sf_interface/: hydro.c  load_interpolator.cxx  reduce_accumulators.cxx  sf_interface.c  sf_interface.h  sf_interface_private.h  unload_accumulator.cxx
src/species_advance/: species_advance.c  species_advance.h
src/util/: util.c  util.h  util_base.h
(+80 files in other folders)
